<resources>
    <string name="app_name">SOLar Wallet</string>
    <string name="error_message_generic">Looks like something went wrong. Please try again.</string>
    <string name="onboarding_welcome_already_have_account">I already have a wallet</string>
    <string name="onboarding_welcome_create_new_account">Create new wallet</string>
    <string name="onboarding_welcome_screen_title_welcome">Welcome to</string>
    <string name="onboarding_welcome_screen_title_app_name_template">^1 Wallet</string>
    <string name="onboarding_welcome_screen_title_app_name">SOLar</string>
    <string name="onboarding_welcome_action_sheet_restore_from_seed_phrase">I have a seed phrase</string>
    <string name="next">Next</string>
    <string name="continue_label">Continue</string>
    <string name="create_account_enter_passphrase_explanation">You will need to remember this password to use this wallet on another device</string>
    <string name="create_account_enter_passphrase_skip">"I don't want a password for this wallet"</string>
    <string name="create_account_enter_passphrase_input_hint">(Optional) Password</string>
    <string name="create_account_enter_passphrase_screen_title">Enter a password</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="create_account_enter_passphrase_skip_warning">Creating an account without a password is less secure and not recommended</string>
    <string name="create_account_enter_passphrase_skip_warning_positive_button">Yes, continue</string>
    <string name="go_back">Go back</string>
    <string name="create_account_enter_seed_phrase_screen_title">Your backup phrase</string>
    <string name="create_account_seed_phrase_explanation_template">This list of words are the ^1. Please store them somewhere safe and secure.</string>
    <string name="create_account_seed_phrase_explanation_bold_text">only way you will be able to recover your account</string>
    <string name="create_account_seed_phrase_continue_button">I have saved these words</string>
    <string name="create_account_seed_phrase_confirmation_title">Just checking…</string>
    <string name="create_account_seed_phrase_confirmation_message">…one last time. Please be sure that you have recorded these words down somewhere safe and secure.</string>
    <string name="create_account_seed_phrase_confirmation_positive_button">Got it, continue</string>
    <string name="copy_to_clipboard">Copy to Clipboard</string>
    <string name="copied_to_clipboard">Copied to Clipboard!</string>
    <string name="seed_phrase_copied_to_clipboard_success_message">Copied!</string>
    <string name="onboarding_restore_account_from_seed_explainer">Enter your recovery phrase.\n\nThis is list of 12 or 24 words that you were given when you generated your wallet</string>
    <string name="onboarding_restore_account_from_seed_screen_title">Restore wallet</string>
    <string name="onboarding_restore_account_from_seed_input_hint">Recovery phrase…</string>
    <string name="onboarding_restore_account_from_seed_add_passphrase">My wallet has a password…</string>
    <string name="error_invalid_seed_phrase_length">Invalid seed phrase. Please check your recovery phrase.</string>
    <string name="onboarding_restore_account_from_seed_passphrase_label">Password: </string>
    <string name="onboarding_restore_account_from_seed_passphrase_dialog_title">Enter password</string>
    <string name="onboarding_restore_account_from_seed_passphrase_dialog_input_hint">(Optional) Password</string>
    <string name="save">Save</string>
    <string name="error_invalid_seed_phrase_words_template">Invalid words: %s</string>
    <string name="restore_account_select_address_screen_title">Choose your wallet</string>
    <string name="sol_amount_error_loading">!</string>
    <string name="lamport_amount_with_sol_suffix">%1$s SOL</string>
    <string name="restore_account_select_address_use_account_button">Use this wallet</string>
    <string name="restore_account_select_address_suggested_wallet">Suggested Wallet</string>
    <string name="restore_account_select_address_alternate_wallets">Alternate wallets:</string>
    <string name="create_account_confirmation_success_title">Success!</string>
    <string name="create_account_confirmation_explainer">This is your public wallet address you can share with others</string>
    <string name="create_account_confirmation_copied_to_clipboard_success_message">Copied!</string>
    <string name="setup_app_lock_enter_pin_screen_title">Create a pin</string>
    <string name="setup_app_lock_enter_pin_explainer">Enter a pin code to help protect access to your wallet. You will need to enter this pin each time you open the app</string>
    <string name="numeric_keyboard_0">0</string>
    <string name="numeric_keyboard_1">1</string>
    <string name="numeric_keyboard_2">2</string>
    <string name="numeric_keyboard_3">3</string>
    <string name="numeric_keyboard_4">4</string>
    <string name="numeric_keyboard_5">5</string>
    <string name="numeric_keyboard_6">6</string>
    <string name="numeric_keyboard_7">7</string>
    <string name="numeric_keyboard_8">8</string>
    <string name="numeric_keyboard_9">9</string>
    <string name="setup_app_lock_confirm_pin_screen_title">Confirm pin</string>
    <string name="setup_app_lock_confirm_pin_explainer">Enter the same pin again.</string>
    <string name="setup_app_lock_error_too_short">Please enter at least %1$s digits</string>
    <string name="setup_app_lock_error_not_matching">The code you entered does not match</string>
    <string name="confirm">Confirm</string>
    <string name="onboarding_error_persisting_secrets_title">We\'ve hit a problem</string>
    <string name="onboarding_error_persisting_secrets_message">There was a problem saving your secret wallet details. You can use the app, but you\'ll need your secret recovery phrase to transact with others</string>
    <string name="onboarding_biometric_prompt_title">Verify that it\'s you</string>
    <string name="onboarding_biometric_prompt_message">We\'ll securely store your wallet secrets so only you have access</string>
    <string name="send">Send</string>
    <string name="request">Request</string>
    <string name="home_send_sheet_title">Send SOL</string>
    <string name="home_send_action_sheet_item_nearby">Another nearby SOLar user</string>
    <string name="home_send_action_sheet_item_from_clipboard_template">Address you copied (^1)</string>
    <string name="home_send_action_sheet_item_scan_qr">Scan a QR code</string>
    <string name="home_send_action_sheet_item_enter_address">Enter a wallet address</string>
    <string name="home_receive_sheet_title">Request SOL</string>
    <string name="home_receive_action_sheet_item_share_address">Share your wallet address</string>
    <string name="home_receive_action_sheet_item_request_amount">Request a specific amount</string>
    <string name="home_balance_sol_label">SOL</string>
    <string name="home_balance_last_fetch_template">Balance as at %1$s</string>
    <string name="settings_screen_title">Settings</string>
    <string name="receive_share_address_screen_title">Your Wallet Address</string>
    <string name="key_display_system_program">System Program</string>
    <string name="key_display_config_program">Config Program</string>
    <string name="key_display_ed25519_program">Ed25519 Program</string>
    <string name="key_display_secp256k1_program">Secp256k1 Program</string>
    <string name="key_display_stake_program">Stake Program</string>
    <string name="key_display_vote_program">Vote Program</string>
    <string name="key_display_memo_program">Memo Program</string>
    <string name="key_display_testnet_faucet">Testnet Faucet</string>
    <string name="key_display_devnet_faucet">Devnet Faucet</string>
    <string name="key_display_bpf_loader_program">BPF Loader Program</string>
    <string name="unknown">Unknown</string>
    <string name="sent">Sent</string>
    <string name="received">Received</string>
    <string name="home_view_more_transactions">View more transactions</string>
    <string name="error_loading_transaction">There was an error loading this transaction</string>
    <string name="error_modal_default_title">There was a problem</string>
    <string name="home_error_loading_transactions_try_again">There was a problem when fetching your recent transactions.\n\nTap here to try again.</string>
    <string name="balance">Balance</string>
    <string name="home_error_loading_balance_try_again">Error loading balance. Tap to retry</string>
    <string name="transaction_details_screen_title">Transaction Details</string>
    <string name="transaction_details_section_title_signatures">Signatures</string>
    <string name="transaction_details_section_title_signature">Signature</string>
    <string name="transaction_details_section_amount">Amount</string>
    <string name="transaction_details_section_block_time">Block time</string>
    <string name="transaction_details_section_fee">Fee</string>
    <string name="transaction_details_accounts">Accounts</string>
    <string name="transaction_details_logs">Logs</string>
    <string name="your_wallet_template">Your Wallet (^1)</string>
    <string name="transaction_details_account_details_balance_label">Balance after transaction:</string>
    <string name="account_key_copied_to_clipboard">Account key copied to clipboard!</string>
    <string name="transaction_details_badge_writer">Writer</string>
    <string name="transaction_details_badge_signer">Signer</string>
    <string name="transaction_details_badge_fee_payer">Fee Payer</string>
    <string name="transaction_details_badge_program">Program</string>
    <string name="transaction_details_section_recent_blockhash">Recent Blockhash</string>
    <string name="transaction_list_screen_title">Transactions</string>
    <string name="receive_wallet_copy_button">Copy Address</string>
    <string name="receive_wallet_share_button">Share</string>
    <string name="receive_wallet_explanation">Other wallets can use your public address to send you SOL.</string>
    <string name="receive_request_amount_amount_input_screen_title">Enter amount</string>
    <string name="receive_request_amount_amount_input_explainer">How many SOL tokens would you like to receive?</string>
    <string name="receive_request_amount_amount_input_hint">SOL amount (Eg 1.05)</string>
    <string name="receive_request_amount_amount_input_error_invalid_amount">Please enter a valid amount</string>
    <string name="receive_request_amount_message_screen_title">Enter message</string>
    <string name="receive_request_amount_message_explainer">Enter an optional message you would like to send with this request. This could be a short message to help someone understand what this request is for.</string>
    <string name="receive_request_amount_message_hint">(Optional) message</string>
    <string name="receive_request_amount_qr_screen_title">Request SOL</string>
    <string name="send_scan_qr_screen_title">Scan QR</string>
    <string name="send_scan_qr_permission_explaination">We\'ll need to use the phone camera to scan a QR.\n\nTap below to grant permission.</string>
    <string name="send_scan_qr_grant_permission_link">Grant Permission</string>
    <string name="send_scan_qr_page_explainer">"You can scan a SolPay-compatible QR code, or a QR code with a solana public key "</string>
    <string name="send_scan_qr_enter_details_manually">Enter details manually</string>
    <string name="or">or</string>
    <string name="send_enter_address_screen_title">Send to…</string>
    <string name="send_enter_address_page_explainer">Enter the public address of the wallet you want to send to</string>
    <string name="send_enter_address_input_hint">Wallet address</string>
    <string name="app_shortcut_label_scan_qr">Send</string>
    <string name="app_shortcut_label_request">Request</string>
    <string name="app_shortcut_label_your_address">Your Address</string>
</resources>