<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/key_1"
        style="@style/NumericKeyboardDigit"
        android:text="@string/numeric_keyboard_1"
        app:layout_constraintBottom_toTopOf="@id/key_4"
        app:layout_constraintEnd_toStartOf="@id/key_2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/key_2"
        style="@style/NumericKeyboardDigit"
        android:text="@string/numeric_keyboard_2"
        app:layout_constraintBottom_toTopOf="@id/key_5"
        app:layout_constraintEnd_toStartOf="@id/key_3"
        app:layout_constraintStart_toEndOf="@id/key_1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/key_3"
        style="@style/NumericKeyboardDigit"
        android:text="@string/numeric_keyboard_3"
        app:layout_constraintBottom_toTopOf="@id/key_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/key_2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/key_4"
        style="@style/NumericKeyboardDigit"
        android:text="@string/numeric_keyboard_4"
        app:layout_constraintBottom_toTopOf="@id/key_7"
        app:layout_constraintEnd_toStartOf="@id/key_5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/key_1" />

    <TextView
        android:id="@+id/key_5"
        style="@style/NumericKeyboardDigit"
        android:text="@string/numeric_keyboard_5"
        app:layout_constraintBottom_toTopOf="@id/key_8"
        app:layout_constraintEnd_toStartOf="@id/key_6"
        app:layout_constraintStart_toEndOf="@id/key_4"
        app:layout_constraintTop_toBottomOf="@id/key_2" />

    <TextView
        android:id="@+id/key_6"
        style="@style/NumericKeyboardDigit"
        android:text="@string/numeric_keyboard_6"
        app:layout_constraintBottom_toTopOf="@id/key_9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/key_5"
        app:layout_constraintTop_toBottomOf="@id/key_3" />

    <TextView
        android:id="@+id/key_7"
        style="@style/NumericKeyboardDigit"
        android:text="@string/numeric_keyboard_7"
        app:layout_constraintBottom_toTopOf="@id/key_0"
        app:layout_constraintEnd_toStartOf="@id/key_8"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/key_4" />

    <TextView
        android:id="@+id/key_8"
        style="@style/NumericKeyboardDigit"
        android:text="@string/numeric_keyboard_8"
        app:layout_constraintBottom_toTopOf="@id/key_0"
        app:layout_constraintEnd_toStartOf="@id/key_9"
        app:layout_constraintStart_toEndOf="@id/key_7"
        app:layout_constraintTop_toBottomOf="@id/key_5" />

    <TextView
        android:id="@+id/key_9"
        style="@style/NumericKeyboardDigit"
        android:text="@string/numeric_keyboard_9"
        app:layout_constraintBottom_toTopOf="@id/backspace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/key_8"
        app:layout_constraintTop_toBottomOf="@id/key_6" />

    <TextView
        android:id="@+id/key_0"
        style="@style/NumericKeyboardDigit"
        android:text="@string/numeric_keyboard_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/backspace"
        app:layout_constraintStart_toEndOf="@id/custom_action"
        app:layout_constraintTop_toBottomOf="@id/key_8" />

    <ImageView
        android:id="@+id/backspace"
        style="@style/NumericKeyboardBackspace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/key_0"
        app:layout_constraintTop_toBottomOf="@id/key_9" />

    <ImageView
        android:id="@+id/custom_action"
        style="@style/NumericKeyboardBackspace"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/key_0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/key_9" />

</merge>