<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?selectableItemBackground"
    android:orientation="vertical"
    android:paddingVertical="@dimen/padding_small">

    <TextView
        android:id="@+id/account_key"
        style="@style/TransactionDetails.Value"
        android:autoSizeTextType="uniform"
        android:maxLines="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/TextAppearance.Solar.Label4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/padding_xsmall"
            android:text="@string/transaction_details_account_details_balance_label"
            android:textColor="?android:textColorSecondary" />

        <TextView
            android:id="@+id/balance"
            style="@style/TextAppearance.Solar.Label4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fontFamily="@font/saira_semicondensed_600" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/metadata_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_small"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/writer_badge"
            style="@style/TransactionDetails.Badge.Default"
            android:text="@string/transaction_details_badge_writer" />

        <TextView
            android:id="@+id/signer_badge"
            style="@style/TransactionDetails.Badge.Default"
            android:text="@string/transaction_details_badge_signer" />

        <TextView
            android:id="@+id/fee_payer_badge"
            style="@style/TransactionDetails.Badge.Default"
            android:text="@string/transaction_details_badge_fee_payer" />

        <TextView
            android:id="@+id/program_badge"
            style="@style/TransactionDetails.Badge.Program"
            android:text="@string/transaction_details_badge_program" />

    </LinearLayout>

</LinearLayout>