<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_baseline_qr_code_scanner_24"
        android:shortcutId="send"
        android:shortcutShortLabel="@string/app_shortcut_label_scan_qr">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="solar://send" />
    </shortcut>

    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_baseline_install_mobile_24"
        android:shortcutId="request"
        android:shortcutShortLabel="@string/app_shortcut_label_request">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="solar://request" />
    </shortcut>

    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_baseline_share_24"
        android:shortcutId="your_address"
        android:shortcutShortLabel="@string/app_shortcut_label_your_address">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="solar://your_address" />
    </shortcut>
</shortcuts>