<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_baseline_close_24"
            app:title="@string/create_account_enter_passphrase_screen_title"
            app:titleCentered="true" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/explainer_message"
            style="@style/TextAppearance.PageInstruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account_enter_passphrase_explanation" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/padding_xlarge"
            android:gravity="center"
            android:hint="@string/create_account_enter_passphrase_input_hint"
            android:inputType="textPassword"
            android:minHeight="@dimen/clickable_element_min_height"
            android:textAppearance="@style/TextAppearance.Solar.Title3" />

        <TextView
            android:id="@+id/skip"
            style="@style/TextAppearance.Link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account_enter_passphrase_skip" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3" />

        <Button
            android:id="@+id/next"
            style="@style/PrimaryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginHorizontal="@dimen/padding_default"
            android:layout_marginBottom="@dimen/padding_default"
            android:text="@string/next" />
    </LinearLayout>

</ScrollView>
