<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/SolarToolbar"
        app:navigationIcon="@drawable/ic_baseline_close_24"
        app:title="@string/send_enter_address_screen_title" />

    <TextView
        android:id="@+id/page_instructions"
        style="@style/TextAppearance.PageInstruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_enter_address_page_explainer"
        app:layout_constraintBottom_toTopOf="@id/input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/input"
        style="@style/TextAppearance.Solar.Title3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/padding_xlarge"
        android:gravity="center"
        android:hint="@string/send_enter_address_input_hint"
        android:imeOptions="actionDone"
        android:inputType="textNoSuggestions|text|textMultiLine"
        android:minHeight="@dimen/clickable_element_min_height"
        app:layout_constraintBottom_toTopOf="@id/address_on_clipboard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/page_instructions" />

    <TextView
        android:id="@+id/address_on_clipboard"
        style="@style/TextAppearance.Link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/continue_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input" />

    <Button
        android:id="@+id/next"
        style="@style/PrimaryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/padding_default"
        android:layout_marginBottom="@dimen/padding_default"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>